<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_gradient"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:padding="20dp">
        <ImageView
            android:id="@+id/LightChartBack"
            android:layout_width="27dp"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_arrow_circle_left_24" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font1"
                android:textColor="#000000"
                android:background="@drawable/border"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:text="@string/cycle"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="100dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font1"
                android:background="@drawable/border"
                android:textColor="#000000"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:text="@string/flow1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="100dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font1"
                android:background="@drawable/border"
                android:textColor="#000000"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:text="@string/flow2"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="100dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flow3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font1"
                android:background="@drawable/border"
                android:textColor="#000000"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:text="@string/flow3"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="100dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hour1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font1"
                android:background="@drawable/border"
                android:textColor="#000000"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:layout_gravity="center"
        android:text=":"
        android:textColor="#000000"
        android:textSize="50sp"
        android:layout_marginStart="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minute1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font1"
                android:background="@drawable/border"
                android:textColor="#000000"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hour2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font1"
                android:background="@drawable/border"
                android:textColor="#000000"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:text="@string/twodot"
            android:textColor="#000000"
            android:textSize="50sp"
            android:layout_marginStart="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#000000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minute2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font1"
                android:background="@drawable/border"
                android:textColor="#000000"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:text="@string/end"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:layout_gravity="center"
            android:layout_marginStart="20dp">
            <Spinner
                android:id="@+id/area_drop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:text="@string/area"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="100dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="137dp">
        <Button
            android:id="@+id/confirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="Confirm"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:fontFamily="@font/font1"
            android:backgroundTint="#00FF00"
            />
    </LinearLayout>
</LinearLayout>